--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,14 @@
 {
-  "require": {
-    "guzzlehttp/guzzle": "^7.0",
-    "vlucas/phpdotenv": "^5.6"
-  }
-  ,
-  "require-dev": {
-    "roave/security-advisories": "dev-latest"
-  }
+    "require": {
+        "guzzlehttp/guzzle": "^7.0",
+        "vlucas/phpdotenv": "^5.6"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "src/"
+        }
+    },
+    "require-dev": {
+        "roave/security-advisories": "dev-latest"
+    }
 }
